# zephyr

./: LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: .dockerignore  Dockerfile  NOTE.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3158b256e203_add_user_id_to_entries.py  55a82702208a_create_initial_tables.py
backend/app/: deps.py  main.py  settings.py
backend/app/api/: router.py
backend/app/api/v1/: media.py  timeline.py
backend/app/common/: enums.py
backend/app/domain/entries/: models.py  repo.py  schemas.py  timeline.py
backend/app/domain/media/: models.py  repo.py
backend/app/infrastructure/db/: session.py
backend/app/infrastructure/ml/: emotion.py  whisper.py
backend/app/infrastructure/queue/: rq.py
backend/app/infrastructure/storage/: local.py
backend/app/workers/: rq_worker.py
backend/app/workers/jobs/: analyze.py  transcribe.py
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: CoverPage.js  DiaryEntry.js  DiaryList.js
frontend/src/services/: moodAgent.js
