[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.1",
    "fastapi>=0.128.0",
    "faster-whisper>=1.2.1",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "redis>=7.1.0",
    "rq>=2.6.1",
    "sqlalchemy>=2.0.46",
    "torch>=2.10.0",
    "transformers>=4.57.6",
    "uvicorn>=0.40.0",
]
